@@ -4844,6 +4844,9 @@
                             <para>Fixed problem with symlink creation for multiple file selection</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed problem with grouping of file size digits</para>
+                        </listitem>
+                        <listitem>
                             <para>Fixed problem #367744 (filename not correctly displayed)</para>
                         </listitem>
                         <listitem>
